[project]
name = "docker"
version = "0.1.0"
description = "docker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
docker = "docker.main:run"
run_crew = "docker.main:run"
train = "docker.main:train"
replay = "docker.main:replay"
test = "docker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
