[project]
name = "crewai_listener_flow"
version = "0.1.0"
description = "crewai_listener_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
]

[project.scripts]
kickoff = "crewai_listener_flow.main:kickoff"
run_crew = "crewai_listener_flow.main:kickoff"
plot = "crewai_listener_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
