[tool.poetry]
name = "crewai_mem0"
version = "0.1.0"
description = "Testing this project"
authors = ["Tyler"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentops = "^0.3.12"
crewai = "^0.63.6"
crewai-tools= "0.12.1"
mem0ai = "^0.1.25"

[project.scripts]
crewai_mem0 = "crewai_mem0.main:run"
run_crew = "crewai_mem0.main:run"
