[tool.poetry]
name = "checklist_flow"
version = "0.1.0"
description = "checklist_flow using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }
asyncio = "*"

[tool.poetry.scripts]
checklist_flow = "checklist_flow.main:main"
run_flow = "checklist_flow.main:main"
plot_flow = "checklist_flow.main:plot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
