[project]
name = "single_llm"
version = "0.1.0"
description = "single_llm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
kickoff = "single_llm.main:kickoff"
run_crew = "single_llm.main:kickoff"
plot = "single_llm.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
