[project]
name = "work_out_flow"
version = "0.1.0"
description = "work_out_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
kickoff = "work_out_flow.main:kickoff"
run_crew = "work_out_flow.main:kickoff"
plot = "work_out_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
