[project]
name = "google_crew"
version = "0.1.0"
description = "google_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
google_crew = "google_crew.main:run"
run_crew = "google_crew.main:run"
train = "google_crew.main:train"
replay = "google_crew.main:replay"
test = "google_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
