[project]
name = "infographic_flow"
version = "0.1.0"
description = "infographic_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
kickoff = "infographic_flow.main:kickoff"
run_crew = "infographic_flow.main:kickoff"
plot = "infographic_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
