[project]
name = "llamaindex_tools"
version = "0.1.0"
description = "llamaindex_tools using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0",
]

[project.scripts]
kickoff = "llamaindex_tools.main:kickoff"
plot = "llamaindex_tools.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
