[project]
name = "fastapi_crew"
version = "0.1.0"
description = "fastapi_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
fastapi_crew = "fastapi_crew.main:run"
run_crew = "fastapi_crew.main:run"
train = "fastapi_crew.main:train"
replay = "fastapi_crew.main:replay"
test = "fastapi_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
