[tool.poetry]
name = "day_04"
version = "0.1.0"
description = "day_04 using crewAI"
authors = ["Tyler Reed <tylerreedytlearning@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
day_04 = "day_04.main:run"
run_crew = "day_04.main:run"
train = "day_04.main:train"
replay = "day_04.main:replay"
test = "day_04.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
