[tool.poetry]
name = "day_05"
version = "0.1.0"
description = "day_05 using crewAI"
authors = ["Tyler Reed <tylerreedytlearning@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
day_05 = "day_05.main:run"
run_crew = "day_05.main:run"
train = "day_05.main:train"
replay = "day_05.main:replay"
test = "day_05.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
