[tool.poetry]
name = "day_06"
version = "0.1.0"
description = "day_06 using crewAI"
authors = ["Tyler Reed <tylerreedytlearning@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
day_06 = "day_06.main:run"
run_crew = "day_06.main:run"
train = "day_06.main:train"
replay = "day_06.main:replay"
test = "day_06.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
