[project]
name = "guide_creator_flow"
version = "0.1.1"
description = "guide_creator_flow using crewAI"
authors = [{ name = "Tyler", email = "tyler@tyler.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "firecrawl",
    "firecrawl-py"
]

[project.scripts]
kickoff = "guide_creator_flow.main:kickoff"
run_crew = "guide_creator_flow.main:kickoff"
plot = "guide_creator_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
