[project]
name = "deep_fried"
version = "0.1.0"
description = "deep_fried using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.85.0,<1.0.0",
]

[project.scripts]
kickoff = "deep_fried.main:kickoff"
plot = "deep_fried.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
