[project]
name = "movieflow"
version = "0.1.0"
description = "movieflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0",
]

[project.scripts]
kickoff = "movieflow.main:kickoff"
plot = "movieflow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
